--- a/code/presentation_of_burnside.ipynb
+++ b/code/presentation_of_burnside.ipynb
@@ -1,109 +1,251 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "227d084d-70d2-4ae9-9748-d5c378fffe2b",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: SAGE_MACAULAY2_COMMAND=/opt/homebrew/bin/M2\n"
-     ]
-    }
+   "cells": [
+      {
+         "cell_type": "code",
+         "execution_count": 1,
+         "id": "227d084d-70d2-4ae9-9748-d5c378fffe2b",
+         "metadata": {
+            "vscode": {
+               "languageId": "sage"
+            }
+         },
+         "outputs": [
+            {
+               "name": "stdout",
+               "output_type": "stream",
+               "text": [
+                  "env: SAGE_MACAULAY2_COMMAND=/opt/homebrew/bin/M2\n"
+               ]
+            }
+         ],
+         "source": [
+            "%env SAGE_MACAULAY2_COMMAND /opt/homebrew/bin/M2"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 3,
+         "id": "17692496-d2e7-4dcd-94d9-bdecaa5c3d91",
+         "metadata": {
+            "vscode": {
+               "languageId": "sage"
+            }
+         },
+         "outputs": [],
+         "source": [
+            "# Given a group G as GAP input\n",
+            "# Returns a pair (A(G), genDisc) where \n",
+            "#       - A(G) is the Burnside Ring of G (as a SAGE object)\n",
+            "#       - genDisc is a dictionary of structure descriptions of the generators\n",
+            "#       - note that this structure description does not distinguish between distinct but abstractly isomorphic subgroups\n",
+            "def burnside_ring(G):\n",
+            "    tomG = G.TableOfMarks()\n",
+            "    matG = Matrix(ZZ, tomG.MatTom())\n",
+            "    nG = matG.dimensions()[0]\n",
+            "    repsG = [tomG.RepresentativeTom(n+1).StructureDescription() for n in range(nG)]\n",
+            "    baseRing = PolynomialRing(ZZ,'x',nG)\n",
+            "    baseGens = baseRing.gens()\n",
+            "    index_of_trivial = nG-1 # GAP always put the trivial orbit at the end of the list\n",
+            "    relations = [baseGens[index_of_trivial]-1]\n",
+            "    for i in range(nG):\n",
+            "        for j in range(i,nG):\n",
+            "            relations.append(baseGens[i]*baseGens[j] - sum(coeff * baseGens[k] for k,coeff in enumerate(matG.solve_left(vector(ZZ, [matG[i][k] * matG[j][k] for k in range(nG)])))))\n",
+            "    burnsideRing = baseRing.quotient(relations)\n",
+            "    generatorDescriptions = { baseGens[i] : str(repsG[index_of_trivial]) + \"/\" + str(repsG[i]) for i in range(nG) }\n",
+            "    return (burnsideRing,generatorDescriptions)\n",
+            "\n",
+            "def print_minimal_presentation(ring):\n",
+            "    print(macaulay2(ring).minimalPresentation())"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 3,
+         "id": "5cd75b2d-6533-411e-82a3-564b362c256d",
+         "metadata": {
+            "vscode": {
+               "languageId": "sage"
+            }
+         },
+         "outputs": [
+            {
+               "name": "stdout",
+               "output_type": "stream",
+               "text": [
+                  "  ZZ[x0]\n",
+                  "---------\n",
+                  "  2\n",
+                  "x0  - 2x0\n"
+               ]
+            }
+         ],
+         "source": [
+            "(AC2,genDisc) = burnside_ring(gap(\"SymmetricGroup(2)\"))\n",
+            "print_minimal_presentation(AC2)"
+         ]
+      },
+      {
+         "cell_type": "markdown",
+         "id": "83226d1f",
+         "metadata": {},
+         "source": [
+            "# Computing norms in Burnside Tambara Functors"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 21,
+         "id": "49f532bd",
+         "metadata": {
+            "vscode": {
+               "languageId": "sage"
+            }
+         },
+         "outputs": [],
+         "source": [
+            "# norm from H to G\n",
+            "def burnside_norm(H, G, vec):\n",
+            "    tomH = H.TableOfMarks()\n",
+            "    matH = matrix(ZZ, tomH.MatTom())\n",
+            "    nH = matH.dimensions()[0]\n",
+            "    repsH = [tomH.RepresentativeTom(n+1) for n in range(nH)]\n",
+            "    tomG = G.TableOfMarks()\n",
+            "    matG = matrix(ZZ, tomG.MatTom())\n",
+            "    nG = matG.dimensions()[0]\n",
+            "    repsG = [tomG.RepresentativeTom(n+1) for n in range(nG)]\n",
+            "    marks_in = vec * matH\n",
+            "    marks_out = vector(ZZ, [1]*nG)\n",
+            "    for i in range(nG):\n",
+            "        for (g, _) in  G.DoubleCosetRepsAndSizes(repsG[i], H):\n",
+            "            idx = next(j for j,r in enumerate(repsH) if H.IsConjugate(r, gap.Intersection(H, repsG[i].ConjugateGroup(g))))\n",
+            "            marks_out[i] *= marks_in[idx]\n",
+            "    return matG.solve_left(marks_out)"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 20,
+         "id": "870daf6c",
+         "metadata": {
+            "vscode": {
+               "languageId": "sage"
+            }
+         },
+         "outputs": [
+            {
+               "name": "stdout",
+               "output_type": "stream",
+               "text": [
+                  "nm_{S_4}^{S_5}(1[S4/C3] + 1[S4/C2 x C2]) = 4341[S5/1] + 264[S5/C2] + 11[S5/C3] + 14[S5/C2 x C2] + 2[S5/C5] + 6[S5/S3] + 3[S5/D10]\n"
+               ]
+            }
+         ],
+         "source": [
+            "H = gap(\"SymmetricGroup(4)\")\n",
+            "G = gap(\"SymmetricGroup(5)\")\n",
+            "vec = vector(ZZ, 11, {3:1, 4:1})\n",
+            "tomH = H.TableOfMarks()\n",
+            "matH = matrix(ZZ, tomH.MatTom())\n",
+            "nH = matH.dimensions()[0]\n",
+            "repsH = [tomH.RepresentativeTom(n+1) for n in range(nH)]\n",
+            "tomG = G.TableOfMarks()\n",
+            "matG = matrix(ZZ, tomG.MatTom())\n",
+            "nG = matG.dimensions()[0]\n",
+            "repsG = [tomG.RepresentativeTom(n+1) for n in range(nG)]\n",
+            "\n",
+            "def mark_to_str_G(v):\n",
+            "    return \" + \".join(f\"{c}[{G.StructureDescription()}/{repsG[i].StructureDescription()}]\" for i,c in enumerate(v) if c != 0)\n",
+            "\n",
+            "def mark_to_str_H(v):\n",
+            "    return \" + \".join(f\"{c}[{H.StructureDescription()}/{repsH[i].StructureDescription()}]\" for i,c in enumerate(v) if c != 0)\n",
+            "\n",
+            "marks_in = vec * matH\n",
+            "marks_out = vector(ZZ, [1]*nG)\n",
+            "for i in range(nG):\n",
+            "    for (g, _) in  G.DoubleCosetRepsAndSizes(repsG[i], H):\n",
+            "        idx = next(j for j,r in enumerate(repsH) if H.IsConjugate(r, gap.Intersection(H, repsG[i].ConjugateGroup(g))))\n",
+            "        marks_out[i] *= marks_in[idx]\n",
+            "nm = matG.solve_left(marks_out)\n",
+            "\n",
+            "print(\"nm_{S_4}^{S_5}(\" + mark_to_str_H(vec) + \") = \" + mark_to_str_G(nm))"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 2,
+         "id": "48813e34",
+         "metadata": {
+            "vscode": {
+               "languageId": "sage"
+            }
+         },
+         "outputs": [],
+         "source": [
+            "def multiplicative_cohomologicalization(G):\n",
+            "    tomG = G.TableOfMarks()\n",
+            "    matG = matrix(ZZ, tomG.MatTom())\n",
+            "    nG = matG.dimensions()[0]\n",
+            "    repsG = [tomG.RepresentativeTom(n+1) for n in range(nG)]\n",
+            "    baseRing = PolynomialRing(ZZ,'x',nG)\n",
+            "    baseGens = baseRing.gens()\n",
+            "    index_of_trivial = nG-1 # GAP always put the trivial orbit at the end of the list\n",
+            "    relations = [baseGens[index_of_trivial]-1]\n",
+            "    for i in range(nG):\n",
+            "        for j in range(i+1,nG):\n",
+            "            relations.append(baseGens[i]*baseGens[j] - sum(coeff * baseGens[k] for k,coeff in enumerate(matG.solve_left(vector(ZZ, [matG[i][k] * matG[j][k] for k in range(nG)])))))\n",
+            "    # set nm_L^G([G:K]) = [G/K]^[G:L] for all K,L\n",
+            "    for i in range(nG):# index of K\n",
+            "        for j,L in enumerate(repsG):\n",
+            "            tomL = L.TableOfMarks()\n",
+            "            nL = int(tomL.OrdersTom().Length())\n",
+            "            repsL = [tomL.RepresentativeTom(n+1) for n in range(nL)]\n",
+            "            marks_in = vector(ZZ, [matG[i][0]]*nL)\n",
+            "            marks_out = vector(ZZ, [1]*nG)\n",
+            "            for m,H in enumerate(repsG):\n",
+            "                for (g, _) in  G.DoubleCosetRepsAndSizes(H,L):\n",
+            "                    idx = next(s for s,r in enumerate(repsL) if L.IsConjugate(r, gap.Intersection(L, H.ConjugateGroup(g))))\n",
+            "                    marks_out[m] *= marks_in[idx]\n",
+            "            nm_vec = matG.solve_left(marks_out)\n",
+            "            relations.append(baseGens[i]**matG[j][0] - sum(coeff * baseGens[k] for k,coeff in enumerate(nm_vec)))\n",
+            "    return baseRing.quotient(relations)"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": null,
+         "id": "b789b9dd",
+         "metadata": {
+            "vscode": {
+               "languageId": "sage"
+            }
+         },
+         "outputs": [],
+         "source": [
+            "G = gap(\"AlternatingGroup(5)\")\n",
+            "A_G_coh = multiplicative_cohomologicalization(G)\n",
+            "print_minimal_presentation(A_G_coh)"
+         ]
+      }
    ],
-   "source": [
-    "%env SAGE_MACAULAY2_COMMAND /opt/homebrew/bin/M2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "17692496-d2e7-4dcd-94d9-bdecaa5c3d91",
    "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
+      "kernelspec": {
+         "display_name": "SageMath 10.7",
+         "language": "sage",
+         "name": "SageMath-10.7"
+      },
+      "language_info": {
+         "codemirror_mode": {
+            "name": "ipython",
+            "version": 3
+         },
+         "file_extension": ".py",
+         "mimetype": "text/x-python",
+         "name": "python",
+         "nbconvert_exporter": "python",
+         "pygments_lexer": "ipython3",
+         "version": "3.13.3"
+      }
    },
-   "outputs": [],
-   "source": [
-    "# Given a group G as GAP input\n",
-    "# Returns a pair (A(G), genDisc) where \n",
-    "#       - A(G) is the Burnside Ring of G (as a SAGE object)\n",
-    "#       - genDisc is a dictionary of structure descriptions of the generators\n",
-    "#       - note that this structure description does not distinguish between distinct but abstractly isomorphic subgroups\n",
-    "def burnside_ring(G):\n",
-    "    tomG = G.TableOfMarks()\n",
-    "    matG = Matrix(ZZ, tomG.MatTom())\n",
-    "    nG = matG.dimensions()[0]\n",
-    "    repsG = [tomG.RepresentativeTom(n+1).StructureDescription() for n in range(nG)]\n",
-    "    baseRing = PolynomialRing(ZZ,'x',nG)\n",
-    "    baseGens = baseRing.gens()\n",
-    "    index_of_trivial = nG-1 # GAP always put the trivial orbit at the end of the list\n",
-    "    relations = [baseGens[index_of_trivial]-1]\n",
-    "    for i in range(nG):\n",
-    "        for j in range(i,nG):\n",
-    "            relations.append(baseGens[i]*baseGens[j] - sum(coeff * baseGens[k] for k,coeff in enumerate(matG.solve_left(vector(ZZ, [matG[i][k] * matG[j][k] for k in range(nG)])))))\n",
-    "    burnsideRing = baseRing.quotient(relations)\n",
-    "    generatorDescriptions = { baseGens[i] : str(repsG[index_of_trivial]) + \"/\" + str(repsG[i]) for i in range(nG) }\n",
-    "    return (burnsideRing,generatorDescriptions)\n",
-    "\n",
-    "def print_minimal_presentation(ring):\n",
-    "    print(macaulay2(ring).minimalPresentation())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "bee67de2",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  ZZ[x0]\n",
-      "---------\n",
-      "  2\n",
-      "x0  - 2x0\n"
-     ]
-    }
-   ],
-   "source": [
-    "(AC2,genDisc) = burnside_ring(gap(\"SymmetricGroup(2)\"))\n",
-    "print_minimal_presentation(AC2)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "SageMath 10.7",
-   "language": "sage",
-   "name": "SageMath-10.7"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+   "nbformat": 4,
+   "nbformat_minor": 5
 }
