Added symmetric and exterior powers

--- a/code/norms.ipynb
+++ b/code/norms.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6030f434",
    "metadata": {
     "vscode": {
@@ -53,7 +53,7 @@
     "    nH = matH.dimensions()[0]\n",
     "    repsH = [tomH.RepresentativeTom(n+1) for n in range(nH)] # reps of conjugacy classes\n",
     "\n",
-    "    return matrix(ZZ,nG,nH,lambda i,j : G.IsConjugate(repsG[i],repsH[j]).sage())\n",
+    "    return matrix(ZZ,nG,nH,lambda i,j : 1 if G.IsConjugate(repsG[i],repsH[j]) else 0)\n",
     "\n",
     "\n",
     "# A function to compute there striction from G to H in the ghost ring\n",
@@ -401,13 +401,145 @@
     "\n",
     "norm(S4, S5, vector(ZZ, 11, {3:1,4:1}))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd323464",
+   "metadata": {},
+   "source": [
+    "# Symmetric and Exterior Powers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6a453f2",
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Take a group G, a vector X in the Burnside ring\n",
+    "# (whose coordinates are the coefficients of the orbits in X),\n",
+    "# and a nonnegative integer k. Computes the k-th symmetric power of X as a G-set.\n",
+    "def symmetric_power(G,X,k):\n",
+    "    tomG = G.TableOfMarks() # create the table of marks of G\n",
+    "    matG = matrix(ZZ, tomG.MatTom()) # table of marks as a matrix\n",
+    "    nG = matG.dimensions()[0] # dimensions of the table of marks\n",
+    "    repsG = [tomG.RepresentativeTom(n+1) for n in range(nG)] # reps of conjugacy classes\n",
+    "    marks_in = X * matG\n",
+    "    marks_out = vector(ZZ,nG)\n",
+    "    R.<t> = PowerSeriesRing(QQ, default_prec=k+1)\n",
+    "    for i in range(nG):\n",
+    "        H = repsG[i]\n",
+    "        tomH = H.TableOfMarks()\n",
+    "        matH = matrix(ZZ, tomH.MatTom())\n",
+    "        nH = matH.dimensions()[0]\n",
+    "        repsH = [tomH.RepresentativeTom(n+1) for n in range(nH)]\n",
+    "        marks_res_X = marks_in * matrix(ZZ,nG,nH,lambda i,j : 1 if G.IsConjugate(repsG[i],repsH[j]) else 0)\n",
+    "        res_X = matH.solve_left(marks_res_X)\n",
+    "        mark_H_s_t_X = prod((1-t^(matH[j][0]))^(-c) for j,c in enumerate(res_X))\n",
+    "        try:\n",
+    "            n = mark_H_s_t_X.exponents().index(k)\n",
+    "            marks_out[i] = mark_H_s_t_X.coefficients()[n]\n",
+    "        except ValueError:\n",
+    "            marks_out[i] = 0\n",
+    "    return matG.solve_left(marks_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5d11055",
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Take a group G, a vector X in the Burnside ring\n",
+    "# (whose coordinates are the coefficients of the orbits in X),\n",
+    "# and a nonnegative integer k. Computes the k-th exterior power of X\n",
+    "# as a G-set, i.e. the G-set X choose k.\n",
+    "def exterior_power(G,X,k):\n",
+    "    tomG = G.TableOfMarks() # create the table of marks of G\n",
+    "    matG = matrix(ZZ, tomG.MatTom()) # table of marks as a matrix\n",
+    "    nG = matG.dimensions()[0] # dimensions of the table of marks\n",
+    "    repsG = [tomG.RepresentativeTom(n+1) for n in range(nG)] # reps of conjugacy classes\n",
+    "    marks_in = X * matG\n",
+    "    marks_out = vector(ZZ,nG)\n",
+    "    if k > sum(c*matG[i][0] for i,c in enumerate(X)):\n",
+    "        return marks_out # exterior power is zero if k > total size of set\n",
+    "    R.<t> = PowerSeriesRing(QQ, default_prec=k+1)\n",
+    "    for i in range(nG):\n",
+    "        H = repsG[i]\n",
+    "        tomH = H.TableOfMarks()\n",
+    "        matH = matrix(ZZ, tomH.MatTom())\n",
+    "        nH = matH.dimensions()[0]\n",
+    "        repsH = [tomH.RepresentativeTom(n+1) for n in range(nH)]\n",
+    "        marks_res_X = marks_in * matrix(ZZ,nG,nH,lambda i,j : 1 if G.IsConjugate(repsG[i],repsH[j]) else 0)\n",
+    "        res_X = matH.solve_left(marks_res_X)\n",
+    "        mark_H_s_t_X = prod((1+t^(matH[j][0]))^c for j,c in enumerate(res_X))\n",
+    "        try:\n",
+    "            n = mark_H_s_t_X.exponents().index(k)\n",
+    "            marks_out[i] = mark_H_s_t_X.coefficients()[n]\n",
+    "        except ValueError:\n",
+    "            marks_out[i] = 0\n",
+    "    return matG.solve_left(marks_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7f5c4a1c",
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Take a group G, a vector X in the Burnside ring\n",
+    "# (whose coordinates are the coefficients of the orbits in X),\n",
+    "# and a nonnegative integer k. Computes the k-th Siebeneicher power of X.\n",
+    "# This is (in particular) a G-set whose permutation representation is the k-th\n",
+    "# exterior power of the permutation representation of X.\n",
+    "def siebeneicher_operation(G,X,k):\n",
+    "    tomG = G.TableOfMarks() # create the table of marks of G\n",
+    "    matG = matrix(ZZ, tomG.MatTom()) # table of marks as a matrix\n",
+    "    nG = matG.dimensions()[0] # dimensions of the table of marks\n",
+    "    repsG = [tomG.RepresentativeTom(n+1) for n in range(nG)] # reps of conjugacy classes\n",
+    "    marks_in = X * matG\n",
+    "    marks_out = vector(ZZ,nG)\n",
+    "    if k > sum(c*matG[i][0] for i,c in enumerate(X)):\n",
+    "        return marks_out # exterior power is zero if k > dimension of permutation representation\n",
+    "    R.<t> = PowerSeriesRing(QQ, default_prec=k+1)\n",
+    "    for i in range(nG):\n",
+    "        H = repsG[i]\n",
+    "        tomH = H.TableOfMarks()\n",
+    "        matH = matrix(ZZ, tomH.MatTom())\n",
+    "        nH = matH.dimensions()[0]\n",
+    "        repsH = [tomH.RepresentativeTom(n+1) for n in range(nH)]\n",
+    "        marks_res_X = marks_in * matrix(ZZ,nG,nH,lambda i,j : 1 if G.IsConjugate(repsG[i],repsH[j]) else 0)\n",
+    "        res_X = matH.solve_left(marks_res_X)\n",
+    "        mark_H_s_t_X = prod((1-(-t)^(matH[j][0]))^c for j,c in enumerate(res_X))\n",
+    "        try:\n",
+    "            n = mark_H_s_t_X.exponents().index(k)\n",
+    "            marks_out[i] = mark_H_s_t_X.coefficients()[n]\n",
+    "        except ValueError:\n",
+    "            marks_out[i] = 0\n",
+    "    return matG.solve_left(marks_out)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 10.7",
+   "display_name": "SageMath 10.8",
    "language": "sage",
-   "name": "SageMath-10.7"
+   "name": "SageMath-10.8"
   },
   "language_info": {
    "codemirror_mode": {
@@ -419,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
