write something about the lambda operations

--- a/code/norms.ipynb
+++ b/code/norms.ipynb
@@ -407,12 +407,46 @@
    "id": "bd323464",
    "metadata": {},
    "source": [
-    "# Symmetric and Exterior Powers"
+    "# Symmetric and Exterior Powers\n",
+    "\n",
+    "Let $X$ be a finite $G$-set. The *$n$-th symmetric power* of $X$, denoted $\\operatorname{Sym}^n X$ is the $G$-set $X^n / \\! / S_n$.\n",
+    "In other words, the elements of $\\operatorname{Sym}^n X$ are multisets $S$ of cardinality $n$ such that $x \\in X$ for all $x \\in S$, and $G$ acts on\n",
+    "$\\operatorname{Sym}^n X$ by acting elementwise on the multisets $S$.\n",
+    "\n",
+    "It's clear that the isomorphism class of $\\operatorname{Sym}^n X$ depends only on the isomorphism class of $X$. Moreover,\n",
+    "$$\\operatorname{Sym}^n (X \\amalg Y) \\cong \\coprod_{k=0}^n \\operatorname{Sym}^k(X) \\times \\operatorname{Sym}^{n-k}(Y)$$\n",
+    "holds for all $X,Y$, which allows us to extend this to an operation (with the same name by abuse of notation) $\\operatorname{Sym}^n : A(G) \\to A(G)$.\n",
+    "The operation $\\operatorname{Sym}^n$ is determined uniquely by condition $\\operatorname{Sym}^n(a+b) = \\sum_{k=0}^n \\operatorname{Sym}^k(a) \\operatorname{Sym}^k(b)$ together with the facts\n",
+    "$$\\operatorname{res}^G_H \\operatorname{Sym}^n (a) = \\operatorname{Sym}^n \\operatorname{res}^G_H (a)$$\n",
+    "and\n",
+    "$$\\chi^G \\operatorname{Sym}^n([G/K]) = \\begin{cases} 1 &: n \\equiv 0 \\pmod{[G:K]} \\\\ 0 &: \\text{else}\\end{cases}$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "One can also form the *$n$-th exterior power* of $X$, denoted $\\bigwedge^n X$ or $\\binom{X}{n}$. The elements of $\\binom{X}{n}$ are the *subsets* of $X$ of cardinality $n$, and $G$ acts on these elementwise. Again, the isomorphism class of $\\binom{X}{n}$ depends only on the isomorphism class of $X$, and we have\n",
+    "$$\\binom{X \\amalg Y}{n} \\cong \\coprod_{k=0}^n \\binom{X}{k} \\times \\binom{Y}{n-k},$$\n",
+    "so we obtain an operation $\\bigwedge^n : A(G) \\to A(G)$. This operation is uniquely determined by the condition $\\bigwedge^n(a+b) = \\sum_{k=0}^n \\bigwedge^k(a) \\bigwedge^{n-k}(b)$, together with the facts\n",
+    "$$\\operatorname{res}^G_H \\bigwedge^n (a) = \\bigwedge^n \\operatorname{res}^G_H (a)$$\n",
+    "and\n",
+    "$$\\chi^G \\bigwedge^n([G/K]) = \\begin{cases} 1 &: n = 0 \\\\ 1 &: n = [G:K] \\\\ 0 &: \\text{else} \\end{cases}$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "For any $x \\in A(G)$, one can form the power series\n",
+    "$$s_t(x) := \\sum_{n \\geq 0} \\operatorname{Sym}^n(x) t^n \\in A(G)[\\![t]\\!].$$\n",
+    "One defines the *Siebeneicher operation* $\\lambda'_n : A(G) \\to A(G)$ by\n",
+    "$$\\sum_{n \\geq 0} \\lambda'_n(x) t^n = s_{-t}(x)^{-1}.$$\n",
+    "\n",
+    "Alternatively, $\\lambda'_n$ is determined by $\\lambda'_n(a+b) = \\sum_{k=0}^n \\lambda'_k(a) \\lambda'_{n-k}(b)$, $\\operatorname{res}^G_H \\lambda'_n(a) = \\lambda'_n \\operatorname{res}^G_H (x)$, and\n",
+    "$$\\chi^G \\lambda'_n([G/K]) = \\begin{cases} 1 &: n = 0 \\\\ (-1)^{[G:K]+1} &: n = [G:K] \\\\ 0 &: \\text{else} \\end{cases}$$\n",
+    "\n",
+    "The point of this operation is that the permutation representation of $\\lambda'_n(x)$ is the $n$-th exterior power of the permutation representation of $x$, i.e.\n",
+    "$$\\mathbb{C}[\\lambda'_n(X)] \\cong \\bigwedge^n \\mathbb{C}[X].$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b6a453f2",
    "metadata": {
     "vscode": {
@@ -537,9 +571,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 10.8",
+   "display_name": "SageMath 10.7",
    "language": "sage",
-   "name": "SageMath-10.8"
+   "name": "SageMath-10.7"
   },
   "language_info": {
    "codemirror_mode": {
@@ -551,7 +585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
