--- a/code/norms.ipynb
+++ b/code/norms.ipynb
@@ -339,7 +339,7 @@
     "            HcapKg = gap.Intersection(H,K.ConjugateGroup(g)) # form the intersection of H and the conjugate of K by g\n",
     "            index = next(j for j,r in enumerate(repsH) if H.IsConjugate(r, HcapKg)) # find the index of the subgroup of H that represents H \\cap K^g\n",
     "            nm[i] *= f[index] # multiply the [K] component of the norm by marksf([H \\cap K^g])\n",
-    "    return nm # convert back into a list of coefficients"
+    "    return nm"
    ]
   },
   {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b6a453f2",
    "metadata": {},
    "outputs": [],
@@ -447,11 +447,7 @@
     "        marks_res_X = marks_in * matrix(ZZ,nG,nH,lambda i,j : 1 if G.IsConjugate(repsG[i],repsH[j]) else 0)\n",
     "        res_X = matH.solve_left(marks_res_X)\n",
     "        mark_H_s_t_X = prod((1-t^(matH[j][0]))^(-c) for j,c in enumerate(res_X))\n",
-    "        try:\n",
-    "            n = mark_H_s_t_X.exponents().index(k)\n",
-    "            marks_out[i] = mark_H_s_t_X.coefficients()[n]\n",
-    "        except ValueError:\n",
-    "            marks_out[i] = 0\n",
+    "        marks_out[i] = mark_H_s_t_X.list()[k]\n",
     "    return matG.solve_left(marks_out)"
    ]
   },
@@ -482,12 +478,8 @@
     "        repsH = [tomH.RepresentativeTom(n+1) for n in range(nH)]\n",
     "        marks_res_X = marks_in * matrix(ZZ,nG,nH,lambda i,j : 1 if G.IsConjugate(repsG[i],repsH[j]) else 0)\n",
     "        res_X = matH.solve_left(marks_res_X)\n",
-    "        mark_H_s_t_X = prod((1+t^(matH[j][0]))^c for j,c in enumerate(res_X))\n",
-    "        try:\n",
-    "            n = mark_H_s_t_X.exponents().index(k)\n",
-    "            marks_out[i] = mark_H_s_t_X.coefficients()[n]\n",
-    "        except ValueError:\n",
-    "            marks_out[i] = 0\n",
+    "        mark_H_l_t_X = prod((1+t^(matH[j][0]))^c for j,c in enumerate(res_X))\n",
+    "        marks_out[i] = marks_H_l_t_X.list()[k]\n",
     "    return matG.solve_left(marks_out)"
    ]
   },
@@ -519,13 +511,33 @@
     "        repsH = [tomH.RepresentativeTom(n+1) for n in range(nH)]\n",
     "        marks_res_X = marks_in * matrix(ZZ,nG,nH,lambda i,j : 1 if G.IsConjugate(repsG[i],repsH[j]) else 0)\n",
     "        res_X = matH.solve_left(marks_res_X)\n",
-    "        mark_H_s_t_X = prod((1-(-t)^(matH[j][0]))^c for j,c in enumerate(res_X))\n",
-    "        try:\n",
-    "            n = mark_H_s_t_X.exponents().index(k)\n",
-    "            marks_out[i] = mark_H_s_t_X.coefficients()[n]\n",
-    "        except ValueError:\n",
-    "            marks_out[i] = 0\n",
+    "        mark_H_lprime_t_X = prod((1-(-t)^(matH[j][0]))^c for j,c in enumerate(res_X))\n",
+    "        marks_out[i] = mark_H_lprime_t_X.list()[k]\n",
     "    return matG.solve_left(marks_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fe48579b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(272, 0, 23, 8, 0, 0, 0, 0, 0, 0, -6, 0, 0, 0, 0, 0, 0, 0, 0)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G = gap(\"SymmetricGroup(5)\")\n",
+    "X = vector(ZZ,19,{0:2,2:-3})\n",
+    "k = 3\n",
+    "siebeneicher_operation(G,X,k)"
    ]
   }
  ],
