--- a/code/norms.ipynb
+++ b/code/norms.ipynb
@@ -21,7 +21,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "6030f434",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
    "outputs": [],
    "source": [
     "# A function to compute there striction from G to H in the ghost ring\n",
@@ -83,7 +87,11 @@
    "cell_type": "code",
    "execution_count": 117,
    "id": "ebbad1a8",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -134,7 +142,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9dd9a1dc",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
    "outputs": [],
    "source": [
     "# A function to compute the transfer from H to G in the Burnside ring\n",
@@ -212,7 +224,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7b5af0a0",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
    "outputs": [],
    "source": [
     "S5 = gap(\"SymmetricGroup(5)\")\n",
@@ -259,7 +275,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "efe1f2b8",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
    "outputs": [],
    "source": [
     "# A function to compute the norm from H to G in the Burnside ring\n",
@@ -346,7 +366,11 @@
    "cell_type": "code",
    "execution_count": 52,
    "id": "6dae9ab7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -424,7 +448,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b6a453f2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
    "outputs": [],
    "source": [
     "# Take a group G, a vector X in the Burnside ring\n",
@@ -447,7 +475,7 @@
     "        marks_res_X = marks_in * matrix(ZZ,nG,nH,lambda i,j : 1 if G.IsConjugate(repsG[i],repsH[j]) else 0)\n",
     "        res_X = matH.solve_left(marks_res_X)\n",
     "        mark_H_s_t_X = prod((1-t^(matH[j][0]))^(-c) for j,c in enumerate(res_X))\n",
-    "        marks_out[i] = mark_H_s_t_X.list()[k]\n",
+    "        marks_out[i] = mark_H_s_t_X.padded_list(k+1)[k]\n",
     "    return matG.solve_left(marks_out)"
    ]
   },
@@ -455,7 +483,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c5d11055",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
    "outputs": [],
    "source": [
     "# Take a group G, a vector X in the Burnside ring\n",
@@ -479,15 +511,19 @@
     "        marks_res_X = marks_in * matrix(ZZ,nG,nH,lambda i,j : 1 if G.IsConjugate(repsG[i],repsH[j]) else 0)\n",
     "        res_X = matH.solve_left(marks_res_X)\n",
     "        mark_H_l_t_X = prod((1+t^(matH[j][0]))^c for j,c in enumerate(res_X))\n",
-    "        marks_out[i] = marks_H_l_t_X.list()[k]\n",
+    "        marks_out[i] = marks_H_l_t_X.padded_list(k+1)[k]\n",
     "    return matG.solve_left(marks_out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7f5c4a1c",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
    "outputs": [],
    "source": [
     "# Take a group G, a vector X in the Burnside ring\n",
@@ -512,15 +548,19 @@
     "        marks_res_X = marks_in * matrix(ZZ,nG,nH,lambda i,j : 1 if G.IsConjugate(repsG[i],repsH[j]) else 0)\n",
     "        res_X = matH.solve_left(marks_res_X)\n",
     "        mark_H_lprime_t_X = prod((1-(-t)^(matH[j][0]))^c for j,c in enumerate(res_X))\n",
-    "        marks_out[i] = mark_H_lprime_t_X.list()[k]\n",
+    "        marks_out[i] = mark_H_lprime_t_X.padded_list(k+1)[k]\n",
     "    return matG.solve_left(marks_out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "fe48579b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sage"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -528,7 +568,7 @@
        "(272, 0, 23, 8, 0, 0, 0, 0, 0, 0, -6, 0, 0, 0, 0, 0, 0, 0, 0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +594,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "sage",
+   "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.13.3"
